gh-pages for page w node server only for dropbox interaction

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               </div>
               <div class="col-lg-10 col-lg-offset-1">
                   <ul>
-                    <li data-toolkitpath="{{{opts.prjfolder}}}">
+                    <li data-toolkitpath="rcrcsims">
                       <ul>
                         <!-- ### folders and file links go here ### -->
                       </ul>
