cleanup and dependencies for image gallery

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="col-sm-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-osm.png" />
+                                  <img src="img/logos/logo-osm.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>OpenStreetMap (OSM)</a></strong>&nbsp; <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in almost every response. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -97,7 +97,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-hot.png" />
+                                  <img src="img/logos/logo-hot.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>Humanitarian OpenStreetMap Team (HOT)</strong>&nbsp; <small>is a charitable organisation that works to enhance OpenStreetMap for locations of humanitarian interest. &nbsp;<a href="https://hotosm.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-missingmaps.png" />
+                                  <img src="img/logos/logo-missingmaps.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>Missing Maps</strong>&nbsp; <small>is a collaboration between HOT and several humanitarian agencies including the American, British and Netherlands Red Cross which aims to map the most vulnerable populations around the world in preparation of future emergencies. &nbsp;<a href="http://www.missingmaps.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo dhn text-center">
-                                  <img src="img/logo-dhn.png" />
+                                  <img src="img/logos/logo-dhn.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>The Digital Humanitarian Network (DHN)</strong>&nbsp; <small>is a consortium of volunteer and tech communities that can be engaged with by traditional humanitarian agencies to solve specified problems. SIMS coordinates with the DHN and has worked with member groups. &nbsp;<a href="http://digitalhumanitarians.com/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -124,7 +124,7 @@
                         <div class="col-sm-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-hdx.png" />
+                                  <img src="img/logos/logo-hdx.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>Humanitarian Data Exchange (HDX)</strong>&nbsp; <small>is an open platform for sharing data between humanitarian actors and is a primary source of external data in our work. &nbsp;<a href="https://data.hdx.rwlabs.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -132,7 +132,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo hid text-center">
-                                  <img src="img/logo-hid.png" />
+                                  <img src="img/logos/logo-hid.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>Humanitarian ID</strong>&nbsp; <small>is an online app for simple and up-to-date contact lists that is both used and endorsed within SIMS. It hinges on the principle of staff checking in and out for each disaster &nbsp;<a href="https://humanitarian.id/#/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-rw.png" />
+                                  <img src="img/logos/logo-rw.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>ReliefWeb</strong>&nbsp; <small>is a web service for all humanitarian news and updates and is used heavily in our compiling of secondary data. Our maps and products have also featured on the site in the past. &nbsp;<a href="http://reliefweb.int/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-hresp.png" />
+                                  <img src="img/logos/logo-hresp.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>HumanitarianResponse</strong>&nbsp; <small>is a central website for information management tools and services managed by UNOCHA. We have attended the IMWG and it is a key reference point for our work. &nbsp;<a href="https://www.humanitarianresponse.info/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -159,7 +159,7 @@
                         <div class="col-sm-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-sheltercluster.png" />
+                                  <img src="img/logos/logo-sheltercluster.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>Shelter Cluster</strong>&nbsp; <small>is the standing coordination mechanism for shelter in response and is co-chaired by IFRC and UNHCR. SIMS works in close contact with the cluster sharing data and expertise. &nbsp;<a href="http://www.sheltercluster.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -167,7 +167,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-acaps.png" />
+                                  <img src="img/logos/logo-acaps.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>ACAPS</strong>&nbsp; <small>is a non-profit set up to support the humanitarian community with needs assessments. SIMS also works in close contact with their teams exchanging both information and resources. &nbsp;<a href="http://www.acaps.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-wb.png" />
+                                  <img src="img/logos/logo-wb.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>The World Bank</strong>&nbsp; <small>has a wealth of data openly available on its online data portal. We regularly use this source in the development of our maps and other products. &nbsp;<a href="http://data.worldbank.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -183,7 +183,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                  <img src="img/logo-nethope.png" />
+                                  <img src="img/logos/logo-nethope.png" />
                                 </div>
                                 <div class="card-text">
                                   <h4 class="no-margin"><strong>The NetHope Crisis Informatics Program</strong>&nbsp; <small>provides information management and data visualisation to improve coordination in a humanitarian emergencies and is in close contact with SIMS. &nbsp;<a href="http://informatics.nethope.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -264,29 +264,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="js/blueimp-helper.js"></script>
-<script src="js/blueimp-gallery.js"></script>
-<script src="js/blueimp-gallery-fullscreen.js"></script>
-<script src="js/blueimp-gallery-indicator.js"></script>
-<script src="js/blueimp-gallery-video.js"></script>
-<script src="js/blueimp-gallery-vimeo.js"></script>
-<script src="js/blueimp-gallery-youtube.js"></script>
-<script src="js/vendor/jquery.js"></script>
-<script src="js/jquery.blueimp-gallery.js"></script>
-
+    <script src="js/blueimp-gallery.min.js"></script>
     <script src="js/sims.js" charset="utf-8"></script>
 
     <script>
-
-    // initializes the lightbox image gallery
-    document.getElementById('gallery-links').onclick = function (event) {
-      event = event || window.event;
-      var target = event.target || event.srcElement,
-          link = target.src ? target.parentNode : target,
-          options = {index: link, event: event},
-          links = this.getElementsByTagName('a');
-      blueimp.Gallery(links, options);
-    };
 
     // Closes the sidebar menu
     $("#menu-close").click(function(e) {
