basic example gallery

--- a/index.html
+++ b/index.html
@@ -78,6 +78,33 @@
         <!-- /.container -->
     </section>
 
+    <!-- Gallery -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <div class="row">
+              <div class="col-lg-10 col-lg-offset-1">
+                  <h2 class="text-center">Information Product Examples</h2>
+                  <div class="row text-center">
+                    <div id="gallery-links"></div>
+                  </div>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+    <div id="blueimp-gallery" class="blueimp-gallery">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div>
+
     <!-- External Resources -->
     <section id="external-resources" class="external-resources">
         <div class="container">
