styling the toolkit section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
+    
+    <div class="section-spacer"></div>
 
     <!-- External Resources -->
     <section id="external-resources" class="external-resources">
@@ -231,6 +233,7 @@
         <!-- /.container -->
     </section>
 
+  <div class="section-spacer"></div>
 
   <!-- About -->
   <section id="toolkit" class="toolkit">
@@ -239,14 +242,11 @@
               <div class="col-lg-12 text-center">
                   <h2>Field Assessment and Coordination Team Toolkit</h2>
               </div>
-              <div class="col-lg-10 col-lg-offset-1">
-                  <ul>
-                    <li data-toolkitpath="toolkit">
-                      <ul>
+              <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <div data-toolkitpath="toolkit" class="toolkit-block">
+                        <div class="contents"></div>
                         <!-- ### folders and file links go here ### -->
-                      </ul>
-                    </li>
-                  </ul>
+                    </div>
               </div>
           </div>
           <!-- /.row -->
@@ -254,6 +254,7 @@
       <!-- /.container -->
   </section>
 
+  <div class="section-spacer"></div>
 
  <!-- Contact  -->
     <section id="feedback" class="feedback">
