intro background image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 
     <!-- Header -->
-    <header id="top" class="header">
+    <header id="top" class="header intro">
         <div class="text-vertical-center">
             <h1>SIMS</h1>
             <h3>Surge Information Management Support</h3>
@@ -104,7 +104,7 @@
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
-    
+
     <div class="section-spacer"></div>
 
     <!-- External Resources -->
