warning for IE9 and below

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         </ul>
     </nav>
 
+    <!--[if lte IE 9]>
+      <div id="browser-warning"><h4>Your browser is out of date and not supported by this website.
+      Please check out <a href="http://browsehappy.com/">Browse Happy</a> to get the lastest versions of major browsers.</h4></div>
+    <![endif]-->
+
     <!-- Header -->
     <header id="top" class="header intro">
         <div class="text-vertical-center">
