--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a href="#about" onclick = $("#menu-close").click(); >About</a>
             </li>
             <li>
+                <a href="#internal-resources" onclick = $("#menu-close").click(); >Internal resources</a>
+            </li>
+            <li>
                 <a href="#external-resources" onclick = $("#menu-close").click(); >External resources</a>
             </li>
             <li>
@@ -82,6 +85,94 @@
         </div>
         <!-- /.container -->
     </section>
+
+    <!-- External Resources -->
+    <section id="internal-resources" class="external-resources">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <h2 class="text-center">Internal Resources</h2>
+            <!-- <p class="lead text-center">Paragraph here</p> -->
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/onepager.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>SIMS One Pager</a></strong>&nbsp; <small>gives a concise overview of SIMS activites, products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/SIMS_One_Pager.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                  </div>
+                </div>
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/im.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Disaster Information Cycle</strong>&nbsp; <small>explained in an infographic. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Chart.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                  </div>
+                </div>
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/cie.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Cash in Emergencies Toolkit</strong>&nbsp; <small> by the International Red Cross and Red Crescent Movement to make cash transfer based programming (CTP)  tools, practical guidance and minimum standards easily accessible. &nbsp;<a href="http://rcmcash.org/" target="_blank"><i class="fa fa-fw fa-external-link"></i></a></small></h4>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-4">
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/activation.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Activation flow</strong>&nbsp; <small>one pager describing the steps of the major phases of SIMS support: activation, response and transition. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Activation_Flow_2016_March_v2.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                  </div>
+                </div>
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/services.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Menu of services</strong>&nbsp; <small>detailing different types of SIMS products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Menu_of_Services_20151222.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-4">
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/tips.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Tips and recommendations</strong>&nbsp; <small>for better information management. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Tips.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a> or <a href="http://simonbjohnson.github.io/im-tips/" target="_blank"><i class="fa fa-fw fa-external-link"></i></a></small></h4>
+                  </div>
+                </div>
+                <div class="card external-resource">
+                  <div class="resources-card">
+                    <img class="img-responsive" src="img/resources/learning.png" />
+                  </div>
+                  <div class="card-text">
+                    <h4 class="no-margin"><strong>Monitoring and learning process</strong>&nbsp; <small>documentating how SIMS reviews support activities and implements changes based on lessons learned. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Monitoring_and_Learning_Process.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                  </div>
+                </div>
+
+
+              </div>
+
+
+            </div>
+            <!-- /.row (nested) -->
+          </div>
+          <!-- /.col-lg-10 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <div class="section-spacer"></div>
 
     <!-- Gallery -->
     <section id="gallery" class="gallery">
@@ -169,7 +260,7 @@
                                   <img src="img/logos/logo-hid.png" />
                                 </div>
                                 <div class="card-text">
-                                  <h4 class="no-margin"><strong>Humanitarian ID</strong>&nbsp; <small>is an online app for simple and up-to-date contact lists that is both used and endorsed within SIMS. It hinges on the principle of staff checking in and out for each disaster &nbsp;<a href="https://humanitarian.id/#/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
+                                  <h4 class="no-margin"><strong>Humanitarian ID</strong>&nbsp; <small>is an online app for simple and up-to-date contact lists that is both used and endorsed within SIMS. It hinges on the principle of staff checking in and out for each disaster. &nbsp;<a href="https://humanitarian.id/#/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
                                 </div>
                             </div>
                             <div class="card external-resource">
