--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <img class="img-responsive" src="img/resources/onepager.png" />
                   </div>
                   <div class="card-text">
-                    <h4 class="no-margin"><strong>SIMS One Pager</a></strong>&nbsp; <small>gives a concise overview of SIMS activites, products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/SIMS_One_Pager.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                    <h4 class="no-margin"><strong>SIMS one pager</a></strong>&nbsp; <small>gives a concise overview of SIMS activites, products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/SIMS_One_Pager.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
                   </div>
                 </div>
                 <div class="card external-resource">
@@ -108,7 +108,7 @@
                     <img class="img-responsive" src="img/resources/im.png" />
                   </div>
                   <div class="card-text">
-                    <h4 class="no-margin"><strong>Disaster Information Cycle</strong>&nbsp; <small>explained in an infographic. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Chart.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                    <h4 class="no-margin"><strong>Disaster information cycle</strong>&nbsp; <small>explained in an infographic. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Chart.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
                   </div>
                 </div>
                 <div class="card external-resource">
