graceful fail when doc api doesn't deliver

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
               <div class="col-lg-10 col-lg-offset-1">
                   <h2 class="text-center">Information Product Examples</h2>
                   <div class="row text-center">
+                    <div class="error-message-gallery"><p><i>Sorry, somthing went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">daniel.joseph@redcross.org</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
                     <div id="gallery-links"></div>
                   </div>
                 </div>
@@ -339,6 +340,7 @@
                   <h2>Field Assessment and Coordination Team Toolkit</h2>
               </div>
               <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <div class="error-message-toolkit"><p><i>Sorry, somthing went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">email</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
                     <div data-toolkitpath="toolkit" class="toolkit-block">
                         <div class="contents"></div>
                         <!-- ### folders and file links go here ### -->
