changed document section to be a list centered and aligned

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/stylish-portfolio.css">
     <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/sims.css">
@@ -80,7 +80,12 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>What is SIMS?</h2>
-                    <p class="lead">The Surge Information Management Support (SIMS) project is a network of trained specialists who develop, coordinate and implement information management systems for global Red Cross and Red Crescent disaster response operations.   SIMS specialists—who include staff and volunteers from Red Cross national societies and the IFRC—help operations leverage the power of mapping, data management and visualization tools to support decision making and enhance reporting.</p>
+                    <h3><p class="lead">
+                        The Surge Information Management Support (SIMS) project is a network of trained specialists who develop, coordinate and implement information management systems for global Red Cross and Red Crescent disaster response operations.
+                    </p></h3>
+                    <p class="lead">
+                        SIMS specialists—who include staff and volunteers from Red Cross national societies and the IFRC—help operations leverage the power of mapping, data management and visualization tools to support decision making and enhance reporting.
+                    </p>
                     <p class="lead">When a disaster occurs, SIMS is activated through the IFRC Disaster Crisis Management Surge Desk to provide either remote or field-based support to operations, according to disaster scale, complexity and impact of the event. In addition to direct operational support, SIMS also serves as a network for information management coordination and capacity building, helping improve information management standards, tools, and expertise across response operations.</p>
                 </div>
             </div>
@@ -256,10 +261,6 @@
                             </div>
 
                         </div> <!--END COL1-->
-
-
-
-
                         <!-- COL 2-->
 
                         <div class="col-sm-4">
@@ -360,7 +361,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Field Assessment and Coordination Team Toolkit</h2>
                 </div>
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <div class="error-message-toolkit"><p><i>Sorry, somthing went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">email</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
                     <div data-toolkitpath="toolkit" class="toolkit-block">
                         <div class="contents"></div>
