--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>What is SIMS?</h2>
-                    <h3><p class="lead">
-                        The Surge Information Management Support (SIMS) project is a network of trained specialists who develop, coordinate and implement information management systems for global Red Cross and Red Crescent disaster response operations.
+                    <h3><p class="lead intro-sims">
+                        The Surge Information Management Support (SIMS) project is a network of trained specialists who develop, coordinate and implement information management systems for global <span class="red-cross-font-colour">Red Cross</span> and <span class="red-cross-font-colour">Red Crescent</span> disaster response operations.
                     </p></h3>
-                    <p class="lead">
-                        SIMS specialists—who include staff and volunteers from Red Cross national societies and the IFRC—help operations leverage the power of mapping, data management and visualization tools to support decision making and enhance reporting.
+                    <p class="intro-more-stuff">
+                        SIMS specialists—who include staff and volunteers from <span class="red-cross-font-colour">Red Cross</span> national societies and the <span class="red-cross-font-colour">IFRC</span>—help operations leverage the power of mapping, data management and visualization tools to support decision making and enhance reporting.
                     </p>
-                    <p class="lead">When a disaster occurs, SIMS is activated through the IFRC Disaster Crisis Management Surge Desk to provide either remote or field-based support to operations, according to disaster scale, complexity and impact of the event. In addition to direct operational support, SIMS also serves as a network for information management coordination and capacity building, helping improve information management standards, tools, and expertise across response operations.</p>
+                    <p class="intro-more-stuff">When a disaster occurs, SIMS is activated through the IFRC Disaster Crisis Management Surge Desk to provide either remote or field-based support to operations, according to disaster scale, complexity and impact of the event. In addition to direct operational support, SIMS also serves as a network for information management coordination and capacity building, helping improve information management standards, tools, and expertise across response operations.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -101,7 +101,6 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2 class="text-center">Internal Resources</h2>
                     <!-- <p class="lead text-center">Paragraph here</p> -->
-                    <p class="lead text-center"></p>
                     <div class="row">
                         <div class="row">
                             <div class="col-sm-4">
@@ -110,7 +109,8 @@
                                         <img class="internal-card-images" src="img/resources/onepager.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>SIMS one pager</strong>&nbsp; <small>gives a concise overview of SIMS activites, products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/SIMS_One_Pager.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>SIMS one pager</strong>&nbsp; <small>gives a concise overview of SIMS activites, products and services. 
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/SIMS_One_Pager.pdf" download><i class="fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +120,8 @@
                                         <img class="internal-card-images" src="img/resources/activation.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Activation flow</strong>&nbsp; <small>one pager describing the steps of the major phases of SIMS support: activation, response and transition. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Activation_Flow_2016_March_v2.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Activation flow</strong>&nbsp; <small>one pager describing the steps of the major phases of SIMS support: activation, response and transition.
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Activation_Flow_2016_March_v2.pdf" download><i class="fa-hover fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +131,8 @@
                                         <img class="internal-card-images" src="img/resources/tips.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Tips and recommendations</strong>&nbsp; <small>for better information management. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Tips.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a> or <a href="http://simonbjohnson.github.io/im-tips/" target="_blank"><i class="fa fa-fw fa-external-link"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Tips and recommendations</strong>&nbsp; <small>for better information management.
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Tips.pdf" download><i class="fa fa-lg fa-file-pdf-o"></i> EN</a> or <a href="http://simonbjohnson.github.io/im-tips/" target="_blank"><i class="fa fa-lg fa-external-link"></i></a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +142,8 @@
                                         <img class="internal-card-images" src="img/resources/im.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Disaster information cycle</strong>&nbsp; <small>explained in an infographic. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Chart.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Disaster information cycle</strong>&nbsp; <small>explained in an infographic. 
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/IM_Chart.pdf" download><i class="fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -150,7 +153,8 @@
                                         <img class="internal-card-images" src="img/resources/services.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Menu of services</strong>&nbsp; <small>detailing different types of SIMS products and services. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Menu_of_Services_20151222.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Menu of services</strong>&nbsp; <small>detailing different types of SIMS products and services. 
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Menu_of_Services_20151222.pdf" download><i class="fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +164,8 @@
                                         <img class="internal-card-images" src="img/resources/learning.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Monitoring and learning process</strong>&nbsp; <small>documentating how SIMS reviews support activities and implements changes based on lessons learned. &nbsp;<a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Monitoring_and_Learning_Process.pdf" download><i class="fa fa-fw fa-file-pdf-o"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Monitoring and learning process</strong>&nbsp; <small>documentating how SIMS reviews support activities and implements changes based on lessons learned. 
+                                            <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Monitoring_and_Learning_Process.pdf" download><i class="fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +175,8 @@
                                         <img class="internal-card-images" src="img/resources/cie.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Cash in Emergencies Toolkit</strong>&nbsp; <small> by the International Red Cross and Red Crescent Movement to make cash transfer based programming (CTP)  tools, practical guidance and minimum standards easily accessible. &nbsp;<a href="http://rcmcash.org/" target="_blank"><i class="fa fa-fw fa-external-link"></i></a></small></h4>
+                                        <h4 class="no-margin"><strong>Cash in Emergencies Toolkit</strong>&nbsp; <small> by the International Red Cross and Red Crescent Movement to make cash transfer based programming (CTP)  tools, practical guidance and minimum standards easily accessible. 
+                                            <a href="http://rcmcash.org/" target="_blank"><i class="fa fa-lg fa-external-link"></i></a></small></h4>
                                     </div>
                                 </div>
                             </div>
