--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2 class="text-center">Information Product Examples</h2>
                     <div class="row text-center">
-                        <div class="error-message-gallery"><p><i>Sorry, somthing went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">daniel.joseph@redcross.org</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
+                        <div class="error-message-gallery"><p><i>Sorry, something went wrong loading this resource. Please refresh the page. If the problem persists, send an email to <a href="mailto:daniel.joseph@redcross.org">daniel.joseph@redcross.org</a> with the name and version of the internet browser you are using. Thank you.</i></p></div>
                         <div id="gallery-links"></div>
                     </div>
                 </div>
