--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <div class="col-sm-4">
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                    <img class="external-card-images card-logo-fit-size" src="img/logos/logo-osm.png" />
+                                    <img class="external-card-images" src="img/logos/logo-osm.png" />
                                 </div>
                                 <div class="card-text">
                                     <h4 class="no-margin"><strong>OpenStreetMap (OSM)</a></strong>&nbsp; <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in almost every response. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -242,7 +242,7 @@
                             </div>
 
                             <div class="card external-resource">
-                                <div class="card-logo dhn text-center resize">
+                                <div class="card-logo dhn text-center">
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-dhn.png" />
                                 </div>
                                 <div class="card-text">
@@ -273,7 +273,7 @@
 
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                    <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hot.png" />
+                                        <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hot.png" />
                                 </div>
                                 <div class="card-text">
                                     <h4 class="no-margin"><strong>Humanitarian OpenStreetMap Team (HOT)</strong>&nbsp; <small>is a charitable organisation that works to enhance OpenStreetMap for locations of humanitarian interest. &nbsp;<a href="https://hotosm.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
@@ -282,8 +282,8 @@
 
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                    <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hdx.png" />
-                                </div>
+                                        <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hdx.png" />
+                                    </div>
                                 <div class="card-text">
                                     <h4 class="no-margin"><strong>Humanitarian Data Exchange (HDX)</strong>&nbsp; <small>is an open platform for sharing data between humanitarian actors and is a primary source of external data in our work. &nbsp;<a href="https://data.hdx.rwlabs.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
                                 </div>
@@ -328,7 +328,7 @@
                             </div>
                             <div class="card external-resource">
                                 <div class="card-logo text-center">
-                                    <img class="external-card-images card-logo-fit-size" src="img/logos/logo-acaps.png" />
+                                    <img class="external-card-images" src="img/logos/logo-acaps.png" />
                                 </div>
                                 <div class="card-text">
                                     <h4 class="no-margin"><strong>ACAPS</strong>&nbsp; <small>is a non-profit set up to support the humanitarian community with needs assessments. SIMS also works in close contact with their teams exchanging both information and resources. &nbsp;<a href="http://www.acaps.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
