--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                         <img class="internal-card-images" src="img/resources/activation.png" />
                                     </div>
                                     <div class="card-text">
-                                        <h4 class="no-margin"><strong>Activation flow</strong>&nbsp; <small>one pager describing the steps of the major phases of SIMS support: activation, response and transition.
+                                        <h4 class="no-margin"><strong>Activation flow</strong>&nbsp; <small>describing the steps of SIMS support: activation, response and transition.
                                             <br /><a href="https://raw.githubusercontent.com/AmericanRedCross/sims-website/gh-pages/docs/Activation_Flow_2016_March_v2.pdf" download><i class="fa-hover fa fa-lg fa-file-pdf-o"></i> EN</a></small></h4>
                                     </div>
                                 </div>
