--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                     <img class="external-card-images" src="img/logos/logo-osm.png" />
                                 </div>
                                 <div class="card-text">
-                                    <h4 class="no-margin"><strong>OpenStreetMap (OSM)</a></strong>&nbsp; <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in almost every response. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
+                                    <h4 class="no-margin"><strong>OpenStreetMap (OSM)</a></strong>&nbsp; <small>is an open-source equivalent of Google Maps which allows anyone to edit and extract data. SIMS uses and contributes to this data in the majority of responses. &nbsp;<a href="http://www.openstreetmap.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
                                 </div>
                             </div>
 
@@ -246,7 +246,7 @@
                                     <img class="external-card-images card-logo-fit-size" src="img/logos/logo-dhn.png" />
                                 </div>
                                 <div class="card-text">
-                                    <h4 class="no-margin"><strong>The Digital Humanitarian Network (DHN)</strong>&nbsp; <small>is a consortium of volunteer and tech communities that can be engaged with by traditional humanitarian agencies to solve specified problems. SIMS coordinates with the DHN and has worked with member groups. &nbsp;<a href="http://digitalhumanitarians.com/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
+                                    <h4 class="no-margin"><strong>The Digital Humanitarian Network (DHN)</strong>&nbsp; <small>is a consortium of volunteer and tech communities that can be engaged with by traditional humanitarian agencies to solve specified problems. SIMS coordinates with the DHN and has worked with its member groups. &nbsp;<a href="http://digitalhumanitarians.com/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
                                 </div>
                             </div>
                             <div class="card external-resource">
@@ -285,7 +285,7 @@
                                         <img class="external-card-images card-logo-fit-size" src="img/logos/logo-hdx.png" />
                                     </div>
                                 <div class="card-text">
-                                    <h4 class="no-margin"><strong>Humanitarian Data Exchange (HDX)</strong>&nbsp; <small>is an open platform for sharing data between humanitarian actors and is a primary source of external data in our work. &nbsp;<a href="https://data.hdx.rwlabs.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
+                                    <h4 class="no-margin"><strong>Humanitarian Data Exchange (HDX)</strong>&nbsp; <small>is an open platform for sharing data between humanitarian actors and is a primary source of external secondary data. &nbsp;<a href="https://data.hdx.rwlabs.org/" target="_blank"><i class="fa fa-external-link"></i></a></small></h4>
                                 </div>
                             </div>
                             <div class="card external-resource">
